nat are implemented by bit operations on target-language integers. Minor
INCOMPATIBILITY.

* SMT:
  - Added Vampire as an experimental SMT solver (vampire_smt_dt has native
    support for datatypes and vampire_smt_nodt does not).
  - Added SMT solver "dummy_smtlib" which immediately fails; this is useful
    when generating SMT-LIB files with Mirabelle.

* Theory "HOL.Fun":
  - Added lemmas.
      antimonotone_on_inf_fun
      antimonotone_on_sup_fun
      mono_on_invE
      mono_on_strict_invE
      monotone_on_inf_fun
      monotone_on_sup_fun
      strict_mono_on_eq
      strict_mono_on_less
      strict_mono_on_less_eq
  - Removed lemmas. Minor INCOMPATIBILITY.
      mono_on_greaterD (use mono_invE instead)
      subset_inj_on (use inj_on_subset)

* Theory "HOL.Relation":
  - Changed definition of predicate refl_on to not constrain the domain
    and range of the relation. To get the old semantics, explicitely use
    the formula "r \<subset> A \<times> A \<and> refl_on A r". INCOMPATIBILITY.
  - Removed predicate single_valuedp. Use predicate right_unique instead.
    INCOMPATIBILITY.
  - Removed lemmas. Minor INCOMPATIBILITY.
      antisym_bot[simp] (use antisymp_on_bot instead)
      antisym_empty[simp] (use antisym_on_bot instead)
      reflp_mono (use reflp_on_mono_strong instead)
      trans_empty[simp] (use trans_on_bot instead)
  - Strengthened lemmas. Minor INCOMPATIBILITY.
      refl_on_empty[simp]
  - Strengthened (and renamed) lemmas. Minor INCOMPATIBILITY.
      antisymp_equality[simp] ~> antisymp_on_equality[simp]
      reflp_on_mono ~> reflp_on_mono_strong
      transp_equality[simp] ~> transp_on_equality[simp]
  - Added lemmas.
      antisym_on_bot[simp]
      antisymp_on_bot[simp]
      antisymp_on_mono
      antisymp_on_mono_strong
      antisymp_on_mono_stronger
      asym_on_bot[simp]
      asymp_on_bot[simp]
      asymp_on_mono[mono]
      asymp_on_mono_strong
      irrefl_on_bot[simp]
      irreflp_on_bot[simp]
      irreflp_on_mono[mono]